# ZUMO

./: .gitignore  .gitmodules  README.md
core/: CMakeLists.txt  GPIO.h  I2C.h  SimpleStream.h  Stream.h  ring_buffer.c  ring_buffer.h
core/Devices/: BM280.cpp  BME280.h  CMakeLists.txt  ICM20948.cpp  ICM20948.h  bhy.cpp  bhy.h  bhy_defs.h  bhy_defs_internal.h
targets/arm/: .mxproject  Makefile  ZUMO_V3.ioc  settings.cmake
targets/arm/Core/Inc/: main.h
targets/arm/Core/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c
targets/arm/HAL/: GPIO_STM32F4x.h  I2C_STM32F4x.h  UART_STM32F4x.cpp  UART_STM32F4x.h
